feat(facade): add live editor loading and loading height

--- a/src/docs/guides/general/server/api.en-US.mdx
+++ b/src/docs/guides/general/server/api.en-US.mdx
@@ -7,7 +7,7 @@ _**rule**_
 3. `GET` and `DELETE` method parameters only can set in pathinfo or query.
 4. `POST`, `PUT` and `PATCH` method need `content-type: application/json` request header in most api.
 
-## Create Unit
+## Create Unit <a id="create-empty-document" />
 
 `POST /universer-api/snapshot/{type}/unit/-/create`
 
