--- a/src/docs/guides/general/server/api.zh-CN.mdx
+++ b/src/docs/guides/general/server/api.zh-CN.mdx
@@ -7,7 +7,7 @@ _**规则**_
 3. `GET` 和 `DELETE` 的请求参数只能出现在路径和 query 里。
 4. `POST`， `PUT` 和 `PATCH` 请求一般需要 `content-type: application/json` 请求头。
 
-## 创建文档
+## 创建文档 <a id="create-empty-document" />
 
 `POST /universer-api/snapshot/{type}/unit/-/create`
 
