--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -186,7 +186,7 @@ HOST_GRAFANA_PORT=13000
 
 4. Start/Restart the service: `bash run.sh`
 
-### How to change S3 config to use self component?  <a id="s3-config"></a>
+### How to change S3 config to use self component?  <a id="s3-config" />
 
 1. Update `.env` file, set the S3 config.
 ```shell
@@ -232,7 +232,7 @@ server:
 - "*": allow all domain CORS, but not support credential headers like authorization, cookie.
 - [SelfDomainOrigin]: like `http://localhost:3010`, use domain origin support credential headers.
 
-### How to change redis config to use self component?  <a id="redis-config"></a>
+### How to change redis config to use self component?  <a id="redis-config" />
 
 1. Update `.env` file, set the redis config:
 ```shell
@@ -248,7 +248,7 @@ REDIS_DB=0
 
 3. Start/Restart the service: `bash run.sh`
 
-### How to change rabbitmq config to use self component?  <a id="rabbitmq-config"></a>
+### How to change rabbitmq config to use self component?  <a id="rabbitmq-config" />
 
 1. Update `.env` file, set the rabbitmq config:
 ```shell
