--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -63,7 +63,7 @@ Of course, you may want more than just the basics. If you're looking to add feat
     If you encounter any issues during installation or use, please refer to the [Troubleshooting](/guides/sheet/server/docker#troubleshooting).
   </Callout>
 
-  ### Install and Run the Frontend <a id="install-and-run-the-frontend"></a>
+  ### Install and Run the Frontend <a id="install-and-run-the-frontend" />
 
   <Tabs items={['pnpm', 'npm', 'Without package manager']}>
     <Tabs.Tab label="pnpm">
