--- a/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.zh-CN.mdx
@@ -64,7 +64,7 @@ import { Callout } from 'nextra/components'
     如果在安装或使用过程中遇到问题，请查看[常见问题](/guides/sheet/server/docker#troubleshooting)。
   </Callout>
 
-  ### 安装并运行前端 <a id="install-and-run-the-frontend"></a>
+  ### 安装并运行前端 <a id="install-and-run-the-frontend" />
 
   <Tabs items={['pnpm', 'npm', '不使用包管理工具']}>
     <Tabs.Tab label="pnpm">
