--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -104,7 +104,7 @@ bash uninstall.sh       # 卸载，保留数据下次使用
 bash uninstall.sh clean # 卸载，删除数据
 ```
 
-## 常见问题 <a id="troubleshooting"></a>
+## 常见问题 <a id="troubleshooting" />
 
 ### 服务的运行目录在哪里？
 
@@ -206,7 +206,7 @@ HOST_GRAFANA_PORT=13000
 
 4. 启动/重启服务：`bash run.sh`。
 
-### 怎样修改 S3 配置以使用自己的组件？ <a id="s3-config"></a>
+### 怎样修改 S3 配置以使用自己的组件？ <a id="s3-config" />
 
 1. 更新 `.env` 文件，修改 S3 对应的配置。
 ```shell
@@ -252,7 +252,7 @@ server:
 - “*”：允许所有域名跨域，但不支持授权头信息比如 authorization、cookie。
 - “你自定义的源”：例如 `http://localhost:3010`，支持授权头信息。
 
-### 如何修改 redis 配置以使用自己的组件？  <a id="redis-config"></a>
+### 如何修改 redis 配置以使用自己的组件？  <a id="redis-config" />
 
 1. 更新 `.env` 文件，设置对应的配置：
 ```shell
@@ -268,7 +268,7 @@ REDIS_DB=0
 
 3. 启动/重启服务：`bash run.sh`
 
-### 如何修改 rabbitmq 配置以使用自己的组件？  <a id="rabbitmq-config"></a>
+### 如何修改 rabbitmq 配置以使用自己的组件？  <a id="rabbitmq-config" />
 
 1. 更新 `.env` 文件，设置对应的配置：
 ```shell
