--- a/src/docs/guides/sheet/facade/dom.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/dom.zh-CN.mdx
@@ -118,9 +118,9 @@ disposable.dispose();
 
 ### addFloatDomToPosition 方法
 
-* 使用该方法前需要安装 `@univerjs/sheet-drawing-ui` 插件。
+* 使用该方法前需要安装 `@univerjs/sheets-drawing-ui` 插件。
 * 浮动DOM是悬浮在sheet上的可拖动组件，同时支持持久化存储。
-* 需要在 univer 渲染完成之后调用.
+* 需要在 univer 渲染完成之后调用。
 * `componentKey` 必须传已注册的组件id 或者react/vue3组件 如果是 vue3组件必须标明isVue3。
 * [完整的参数定义](https://univer.ai/typedoc/@univerjs/sheets-drawing-ui/interfaces/ICanvasFloatDom)
 
