--- a/src/docs/guides/doc/facade/doc-api.zh-CN.mdx
+++ b/src/docs/guides/doc/facade/doc-api.zh-CN.mdx
@@ -64,23 +64,23 @@ univer.createUnit(UniverInstanceType.UNIVER_DOC, {});`
 
 ```ts
 const univerAPI = FUniver.newAPI(univer);
-const activeDoc = univerAPI.getActiveDocument()
-const unitId = activeDoc?.getId()
+const doc = univerAPI.getActiveDocument()
+const unitId = doc?.getId()
 ```
 
 ### 获取文档数据
 
 ```ts
 const univerAPI = FUniver.newAPI(univer);
-const activeDoucment = univerAPI.getActiveDocument()
-const saveData = activeDoucment.getSnapshot();
+const doc = univerAPI.getActiveDocument()
+const saveData = doc.getSnapshot();
 ```
 
 或者
 
 ```ts
-const document = univer.createUniverDoc({});
-const saveData = document.save();
+const doc = univer.createUniverDoc({});
+const saveData = doc.save();
 ```
 
 ### 销毁文档
@@ -101,8 +101,8 @@ univer.dispose();
 
 ```ts
 const univerAPI = FUniver.newAPI(univer)
-const activeDoc = univerAPI.getActiveDocument()
-activeDoc?.appendText('Univer')
+const doc = univerAPI.getActiveDocument()
+doc?.appendText('Univer')
 ```
 
 ### 删除文本
@@ -135,8 +135,8 @@ univerAPI.executeCommand("doc.command.set-inline-format-text-color", {value: "#f
 
 ```ts
 const univerAPI = FUniver.newAPI(univer)
-const activeDoc = univerAPI.getActiveDocument()
-activeDoc?.appendText('\f')
+const doc = univerAPI.getActiveDocument()
+doc?.appendText('\f')
 ```
 
 {/* 选区 */}
