docs: fix sheets-formula locale import

--- a/src/docs/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.en-US.mdx
@@ -110,7 +110,7 @@ import UIEnUS from '@univerjs/ui/locale/en-US';
 import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
 import SheetsEnUS from '@univerjs/sheets/locale/en-US';
 import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
-import SheetsFormulaEnUS from '@univerjs/sheets-formula-ui/locale/en-US';
+import SheetsFormulaUIEnUS from '@univerjs/sheets-formula-ui/locale/en-US';
 ```
 
 <Callout type="info" emoji="ℹ️">
@@ -128,7 +128,7 @@ const univer = new Univer({
       SheetsEnUS,
       DocsUIEnUS,
       SheetsUIEnUS,
-      SheetsFormulaEnUS,
+      SheetsFormulaUIEnUS,
       UIEnUS,
       DesignEnUS,
     ),
