--- a/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -110,7 +110,7 @@ import UIZhCN from '@univerjs/ui/locale/zh-CN';
 import DocsUIZhCN from '@univerjs/docs-ui/locale/zh-CN';
 import SheetsZhCN from '@univerjs/sheets/locale/zh-CN';
 import SheetsUIZhCN from '@univerjs/sheets-ui/locale/zh-CN';
-import SheetsFormulaZhCN from '@univerjs/sheets-formula/locale/zh-CN';
+import SheetsFormulaUIZhCN from '@univerjs/sheets-formula-ui/locale/zh-CN';
 ```
 
 <Callout type="info" emoji="ℹ️">
@@ -128,7 +128,7 @@ const univer = new Univer({
       SheetsZhCN,
       DocsUIZhCN,
       SheetsUIZhCN,
-      SheetsFormulaZhCN,
+      SheetsFormulaUIZhCN,
       UIZhCN,
       DesignZhCN,
     ),
