--- a/src/docs/guides/sheet/features/core.en-US.mdx
+++ b/src/docs/guides/sheet/features/core.en-US.mdx
@@ -58,7 +58,7 @@ import DesignEnUS from '@univerjs/design/locale/en-US';
 import DocsUIEnUS from '@univerjs/docs-ui/locale/en-US';
 import SheetsEnUS from '@univerjs/sheets/locale/en-US';
 import SheetsUIEnUS from '@univerjs/sheets-ui/locale/en-US';
-import SheetsFormulaEnUS from '@univerjs/sheets-formula/locale/en-US';
+import SheetsFormulaUIEnUS from '@univerjs/sheets-formula-ui/locale/en-US';
 import UIEnUS from '@univerjs/ui/locale/en-US';
 
 const univer = new Univer({
@@ -70,7 +70,7 @@ const univer = new Univer({
       DocsUIEnUS,
       SheetsEnUS,
       SheetsUIEnUS,
-      SheetsFormulaEnUS,
+      SheetsFormulaUIEnUS,
       UIEnUS
     ),
   },
