--- a/src/docs/guides/sheet/features/core.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/core.zh-CN.mdx
@@ -57,7 +57,7 @@ import DesignZhCN from '@univerjs/design/locale/zh-CN';
 import DocsUIZhCN from '@univerjs/docs-ui/locale/zh-CN';
 import SheetsZhCN from '@univerjs/sheets/locale/zh-CN';
 import SheetsUIZhCN from '@univerjs/sheets-ui/locale/zh-CN';
-import SheetsFormulaZhCN from '@univerjs/sheets-formula/locale/zh-CN';
+import SheetsFormulaUIZhCN from '@univerjs/sheets-formula-ui/locale/zh-CN';
 import UIZhCN from '@univerjs/ui/locale/zh-CN';
 
 const univer = new Univer({
@@ -69,7 +69,7 @@ const univer = new Univer({
       DocsUIZhCN,
       SheetsZhCN,
       SheetsUIZhCN,
-      SheetsFormulaZhCN,
+      SheetsFormulaUIZhCN,
       UIZhCN
     ),
   },
