--- a/src/docs/guides/sheet/getting-started/i18n.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/i18n.zh-CN.mdx
@@ -18,7 +18,7 @@ import UIZhCN from '@univerjs/ui/locale/zh-CN';
 import DocsUIZhCN from '@univerjs/docs-ui/locale/zh-CN';
 import SheetsZhCN from '@univerjs/sheets/locale/zh-CN';
 import SheetsUIZhCN from '@univerjs/sheets-ui/locale/zh-CN';
-import SheetsFormulaZhCN from '@univerjs/sheets-formula-ui/locale/zh-CN';
+import SheetsFormulaUIZhCN from '@univerjs/sheets-formula-ui/locale/zh-CN';
 
 const univer = new Univer({
   theme: defaultTheme,
@@ -28,7 +28,7 @@ const univer = new Univer({
       SheetsZhCN,
       DocsUIZhCN,
       SheetsUIZhCN,
-      SheetsFormulaZhCN,
+      SheetsFormulaUIZhCN,
       UIZhCN,
       DesignZhCN,
     ),
