docs(umd): update umd code

--- a/src/docs/guides/sheet/getting-started/installation.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.en-US.mdx
@@ -210,6 +210,7 @@ Current mainstream CDN service providers (such as jsDelivr and unpkg) support Un
       UniverDesign,
       UniverEngineRender,
       UniverEngineFormula,
+      UniverSheetsFormulaUi,
       UniverDocs,
       UniverDocsUi,
       UniverUi,
@@ -242,6 +243,7 @@ Current mainstream CDN service providers (such as jsDelivr and unpkg) support Un
     univer.registerPlugin(UniverSheetsUi.UniverSheetsUIPlugin);
     univer.registerPlugin(UniverSheetsNumfmt.UniverSheetsNumfmtPlugin);
     univer.registerPlugin(UniverSheetsFormula.UniverSheetsFormulaPlugin);
+    univer.registerPlugin(UniverSheetsFormulaUi.UniverSheetsFormulaUIPlugin);
 
     univer.createUnit(UniverCore.UniverInstanceType.UNIVER_SHEET, {})
 
