--- a/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -210,6 +210,7 @@ univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});`
       UniverDesign,
       UniverEngineRender,
       UniverEngineFormula,
+      UniverSheetsFormulaUi,
       UniverDocs,
       UniverDocsUi,
       UniverUi,
@@ -242,6 +243,7 @@ univer.createUnit(UniverInstanceType.UNIVER_SHEET, {});`
     univer.registerPlugin(UniverSheetsUi.UniverSheetsUIPlugin);
     univer.registerPlugin(UniverSheetsNumfmt.UniverSheetsNumfmtPlugin);
     univer.registerPlugin(UniverSheetsFormula.UniverSheetsFormulaPlugin);
+    univer.registerPlugin(UniverSheetsFormulaUi.UniverSheetsFormulaUIPlugin);
  
     univer.createUnit(UniverCore.UniverInstanceType.UNIVER_SHEET, {})
  
